--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .webstudio {
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
-    size: 26px;
+    font-size: 26px;
     font-weight: 700;
 }
 .web {
