--- a/style.css
+++ b/style.css
@@ -158,14 +158,6 @@ body {
   font-size: 16px;
   text-align: center;
 }
-
-.footer {
-  background-color: #2F303A;
-  font-weight: 400;
-  font-size: 14px;
-  padding: 10px;
-}
-
 .main-button-list {
   display: flex;
   font-weight: 500;
@@ -191,6 +183,9 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
+.main-portfolio-list:nth-last-child(-n + 3) {
+  margin-bottom: 94px;
+}
 
 .portfolio-main {
   display: flex;
@@ -198,7 +193,13 @@ body {
   border: 1px solid #EEEEEE;
   margin: 2px;
 }
-
+/* ======================================================================Footer====================================================================================== */
+.footer {
+  background-color: #2F303A;
+  font-weight: 400;
+  font-size: 14px;
+  padding: 10px;
+}
 .footer-webstudio {
   text-decoration: none;
   font-family: "Raleway", sans-serif;
