--- a/style.css
+++ b/style.css
@@ -1,14 +1,30 @@
-*::after,
-*::before {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-li {
-  list-style-type: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
 }
 
 a {
   text-decoration: none;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .container {
@@ -37,12 +53,12 @@ body {
   color: #2196F3;
 }
 .header {
+  height: 80px;
   justify-content: center;
   display: flex;
   align-items: center;
   font-weight: 500;
-  font-size: 14px;
-  
+  font-size: 14px;  
 }
 
 .header-menu {
@@ -64,7 +80,7 @@ body {
   
 }
 .header-contact-link:first-child{
-  margin-right: 30px;
+  margin-right: 47px;
 }
 .header-menu-link:hover {
   color: #2196F3;
@@ -78,15 +94,17 @@ body {
   margin-top: 0;
   text-align: center;
   height: 600px;
-  background-color: #2f303a
+  background-color: #2f303a;
+  margin-bottom: 94px;
 }
 
 .main-heading {
   padding-top: 200px;
   color: white;
-  text-align: center;
   font-weight: 900;
   font-size: 44px;
+  text-align: center;
+  margin-bottom: 23px;
 }
 
 .main-button {
@@ -125,6 +143,8 @@ body {
   text-align: center;
   font-weight: 700;
   font-size: 36px;
+  margin-top: 94px;
+  margin-bottom: 50px;
 }
 .main-list-item {
   margin-right: 30px;
@@ -147,6 +167,7 @@ body {
 .main-description-job {
   color: #757575;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 .team-item {
@@ -157,6 +178,8 @@ body {
   font-weight: 500;
   font-size: 16px;
   text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 .main-button-list {
   display: flex;
@@ -167,6 +190,10 @@ body {
 .portfolio-button {
   border: none;
   margin-right: 8px;
+}
+.portfolio-button:hover {
+ background-color: #2196F3;
+ color: #fff;
 }
 .main-link {
   font-weight: 700;
@@ -183,6 +210,7 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
+
 .main-portfolio-list:nth-last-child(-n + 3) {
   margin-bottom: 94px;
 }
@@ -213,16 +241,20 @@ body {
 
 .footer-webstudio {
   color: #2196F3;
-  margin-bottom: 20px;
 }
 
 .footer-address {
-  color: white
+  color: white;
 }
 
 .footer-contact {
   color: white;
 }
 .footer-list-item {
+  color: #fff;
+  opacity: 0.6;
   margin-bottom: 9px;
+}
+.footer-list-item:first-child{
+   opacity: 1;
 }
