--- a/style.css
+++ b/style.css
@@ -66,24 +66,37 @@ body {
   width: 218px;
   margin-right: 344px;
 }
+.email-svg {
+  height: 12px;
+  width: 16px;
+}
+.phone-svg {
+  width: 10px;
+  height: 16px;
+}
 
 .header-contact {
   display: flex;
 }
-
+.header-contact-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header-contact-item:first-child {
+  margin-right: 30px;
+}
 .header-menu-link {
-  margin-right: 50px;
   color: #212121;
+  margin-left: 10px;
 }
 .header-contact-link {
   color: #757575;
-  
+  margin-left: 10px;
 }
-.header-contact-link:first-child{
-  margin-right: 47px;
-}
-.header-menu-link:hover {
+.header-contact-item:hover {
   color: #2196F3;
+  fill: #2196F3;
 }
 
 .header-contact-link:hover {
@@ -158,22 +171,22 @@ body {
   background-repeat: no-repeat;
   background-color: #F5F4FA;
 }
-.main-subheading:nth-child(1)::before  {
+.main-list-item:nth-child(1)>.main-subheading::before  {
   content: "";
   background-image: url(img/antenna1.svg);
   
 }
-   .main-subheading:nth-child(2)::before  {
- content: "";
+   .main-list-item:nth-child(2)>.main-subheading::before  {
+   content: "";
   background-image: url(img/clock1.svg);
   
 }
-.main-subheading:nth-child(3)::before  {
+.main-list-item:nth-child(3)>.main-subheading::before  {
   content: "";
   background-image: url(img/diagram1.svg);
   
 }
-.main-subheading:nth-child(4)::before  {
+.main-list-item:nth-child(4)>.main-subheading::before  {
   content: "";
   background-image: url(img/astronaut1.svg);
   
@@ -187,6 +200,33 @@ body {
 .main-list-team {
   display: flex;
   justify-content: space-between;
+}
+.icon {
+  height: 20px;
+  width: 20px;
+  fill: #AFB1B8;
+}
+.icon:hover {
+  fill: #fff;
+
+}
+.svg-list {
+  display: flex;
+  margin-left: 32px;
+  row-gap: 10px;
+  margin-bottom: 30px;
+}
+.svg-list-item {
+  display: flex;
+  height: 44px;
+  width: 44px;
+  margin-right: 10px;
+  align-items: center;
+  justify-content: center;
+}
+.svg-list-item:hover {
+  background-color: #2196F3;
+  border-radius: 25px;
 }
 
 .team-section {
@@ -245,38 +285,73 @@ body {
 .main-portfolio-list {
   display: flex;
   flex-wrap: wrap;
+  gap: 27px;
 }
 
 .main-portfolio-list:nth-last-child(-n + 3) {
   margin-bottom: 94px;
 }
 
+
 .portfolio-main {
   display: flex;
   flex-direction: column;
   border: 1px solid #EEEEEE;
-  margin: 2px;
+}
+
+.clients-section{
+
+}
+.clients-list {
+  display: flex;
+  margin-bottom: 94px;
+}
+.clients-list-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 92px;
+  width: 170px;
+  border: 1px solid #AFB1B8
+}
+.clients-list-item:hover {
+  border: 1px solid #2196F3
+}
+.clients-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+.client-svg {
+  height: 60px;
+  width: 106px;
+  fill: #AFB1B8;
+}
+.client-svg:hover {
+  fill: #2196F3;
 }
 /* ======================================================================Footer====================================================================================== */
 .footer {
   background-color: #2F303A;
   font-weight: 400;
   font-size: 14px;
-  padding: 10px;
+  display: flex;
+  flex-direction: row;
+}
+.footer-div {
+  padding-top: 60px;
+}
+.footer-block {
+  margin-top: 20px;
 }
 .footer-webstudio {
   text-decoration: none;
   font-family: "Raleway", sans-serif;
   font-size: 26px;
   font-weight: 700;
+  color: #2196F3;
 }
 
 .footer-studio {
   color: white
-}
-
-.footer-webstudio {
-  color: #2196F3;
 }
 
 .footer-address {
@@ -289,8 +364,44 @@ body {
 .footer-list-item {
   color: #fff;
   opacity: 0.6;
-  margin-bottom: 9px;
 }
+.footer-list-item:not(:first-child) {
+  margin-top: 9px;
+}
+
 .footer-list-item:first-child{
    opacity: 1;
+}
+.footer-list-item:last-child {
+  padding-bottom: 60px;
+}
+.icon-footer {
+  height: 20px;
+  width: 20px;
+  fill: #fff;
+}
+.footer-svg-list-item {
+  display: flex;
+  height: 44px;
+  width: 44px;
+  margin-right: 10px;
+  align-items: center;
+  justify-content: center;
+  background: #FFFFFF1A;
+  border-radius: 25px;
+}
+.footer-svg-list-item:hover {
+  background-color: #2196F3;
+}
+.footer-heading {
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 700;
+  color: #fff; 
+}
+.footer-wrapper {
+  
+}
+.footer-svg-list {
+  display: flex;
 }
