--- a/style.css
+++ b/style.css
@@ -223,7 +223,25 @@ body {
   justify-content: space-between;
   margin-bottom: 94px;
 }
+.main-list-images-item {
+  position: relative;
+  text-align: center; 
+}
 
+.image-label {
+  color: #fff;
+  font-weight: 700;
+  font-size: 14px;
+  position: absolute;
+  bottom: 5px;
+  left: 0; 
+  right: 0; 
+  margin: 0 auto; 
+  padding-bottom: 35px;
+  padding-top: 35px;
+  background-color: #2F303ACC;
+  opacity: 0.8; 
+}
 .main-list-team {
   display: flex;
   justify-content: space-between;
@@ -232,10 +250,6 @@ body {
   height: 20px;
   width: 20px;
   fill: #AFB1B8;
-}
-.icon:hover {
-  fill: #fff;
-
 }
 .svg-list {
   display: flex;
@@ -250,10 +264,11 @@ body {
   margin-right: 10px;
   align-items: center;
   justify-content: center;
-}
-.svg-list-item:hover {
-  background-color: #2196F3;
   border-radius: 25px;
+}
+.svg-list-item:hover, .icon:hover {
+  background-color: #2196F3;
+  fill: #fff;
 }
 
 .team-section {
