--- a/style.css
+++ b/style.css
@@ -65,19 +65,102 @@ body {
   width: 528px;
   background-color: rgb(255, 255, 255);
   transform: translate(-50%, -50%);
+  border-radius: 4px;
  }
-
+.modal-heading {
+  font-weight: 700;
+  font-size: 20px;
+  color: #212121;
+}
  .registration-label {
   display: flex;
   flex-direction: column;
-  
+  margin-top: 11px;
+  position: relative;
+ }
+ .registration-label>p {
+  font-size: 12px;
+  font-weight: 400px;
+  color: #757575;
+  align-self: flex-start;
+  margin-left: 40px;
  }
  .registration-label>input {
   width: 448px;
   height: 40px;
   align-self: center;
+  border: 1px solid #21212133
  }
-
+.registration-label>textarea {
+  margin-bottom: 20px;
+  max-height: 120px;
+  min-height: 120px;
+  max-width: 448px;
+  min-width: 448px;
+  align-self: center;
+  border: 1px solid #21212133
+}
+.registration-label>textarea:hover {
+  border: 1px solid #2196F3;
+}
+.registration-label:hover>svg, .registration-label:hover>input  {
+  fill: #2196F3;
+  border: 1px solid #2196F3;
+}
+.registration-label:hover>svg {
+  border: none;
+}
+.registration-label>svg {
+  height: 12px;
+  width: 12px;
+  position: absolute;
+  left: 55px;
+  top: 50%;
+ }
+ .registration-label>svg:hover {
+  fill: #2196F3;
+ }
+ .contract-span {
+  color: #2196F3;
+  text-decoration: underline;
+ }
+ .send-button {
+  height: 50px;
+  width: 200px;
+  background-color: #2196F3;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  box-shadow: 0px 4px 4px 0px #00000026;
+  margin-top: 30px;
+ }
+ .send-button:hover {
+  transform: scale(1.05);
+  background-color: #188CE8;
+ }
+ .checkbox {
+  display: flex;
+  justify-content: center;
+ }
+ .checkbox>input {
+  margin-right: 5px
+ }
+ .btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 1px solid #0000001A;
+  margin-left: 480px;
+  margin-top: 8px;
+}
+ .cross {
+  height: 11px;
+  width: 11px;
+ }
+ .btn:hover>.cross {
+  fill: #2196F3;
+ }
 /* ===================================================================================================  */
 
 
@@ -186,6 +269,9 @@ body {
   width: 216px;
   height: 50px;
   border-radius: 5px;
+}
+.btn-open:hover {
+  transform: scale(1.05);
 }
 
 .main-list {
@@ -486,7 +572,7 @@ body {
 }
 .footer-heading {
   font-family: Roboto;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
   color: #fff; 
   margin-bottom: 20px;
@@ -497,4 +583,48 @@ body {
 }
 .footer-svg-list {
   display: flex;
+  margin-top: 30px
+}
+.footer-form {
+  margin-left: 90px;
+}
+.footer-email {
+  height: 50px;
+  width: 358px;
+  border: 1px solid #FFFFFF4D;
+  border-radius: 4px;
+  background-color: #2F303A;
+  
+}
+.footer-email::placeholder {
+  color: #fff;
+  opacity: 0.6;
+  font-size: 16px;
+  font-weight: 400px;
+}
+.subscribe-button {
+  height: 50px;
+  width: 200px;
+  margin-left: 12px;
+  border-radius: 4px;
+  background-color: #2196F3;
+  color: #fff;
+  font-weight: 700px;
+  font-size: 16px;
+  font-family: Roboto;
+}
+
+.icon-send {
+  height: 24px;
+  width: 24px;
+  margin-left: 10px;
+  margin-right: 28px;
+  fill: #fff;
+}
+.button-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 28px;
+  
 }
