--- a/style.css
+++ b/style.css
@@ -668,6 +668,10 @@ body {
 }
 .footer-svg-list-item:hover {
   background-color: #2196f3;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 .footer-heading {
   font-family: Roboto;
